# arni

./: .dockerignore  .env.example  .gitignore  =7.0.0  AGENTS.md  ANALYSIS.md  ANALYSIS_DEPLOYMENT.md  ANALYSIS_NOTES.md  CAMPAIGN_CONCEPT.md  CLAUDE.md  CODEBASE_ANALYSIS_INTEGRATIONPLAN.md  CODEBASE_ANALYSIS_ROADMAP.md  CODEBASE_ANALYSIS_TASKS.md  CURRENT_TASK.md  DOMAIN_MIGRATION.md  DYN-7_Implementation_Summary.md  DYN-7_analysis.md  Dockerfile  FINAL_REPORT.md  FINAL_REPORT_PHASE_2.md  GEMINI.md  HIGH_END_SAAS_PLAN.md  IMPLEMENTATION_NOTES.md  INTEGRATIONPLAN.md  INTEGRATION_CATALOG.md  INTEGRATION_HUB_BUGS.md  LIVE_TEST_DEPLOY.md  LIVE_TEST_FINAL.md  LIVE_TEST_NOTES.md  MEMORY.md  README.md  ROADMAP.md  STRIPE_INTEGRATION_DOCS.md  STRIPE_INTEGRATION_NOTES.md  TASKS.md  TRIAL_PLAN_CONCEPT.md  alembic.ini  check_db.py  debug_langfuse.py  deployment_report.txt  (+8 more)
.antigravity/: environment.md  gemini.md
.playwright-cli/: page-2026-02-20T23-17-48-516Z.yml  page-2026-02-20T23-18-06-749Z.yml  page-2026-02-20T23-18-32-180Z.yml  page-2026-02-20T23-18-46-108Z.yml  page-2026-02-20T23-19-05-861Z.yml  page-2026-02-20T23-24-07-089Z.yml  page-2026-02-20T23-24-11-523Z.yml  page-2026-02-20T23-24-16-103Z.yml
alembic/: env.py
app/: __init__.py
config/: guardrails.yaml  settings.py
deploy/: nginx-ariia.ai.conf
docs/: INTEGRATIONS_SETUP.md  MEMBER_SOURCES_ARCHITECTURE.md  PRICING_MODEL.md  RBAC_FEATURE_GATING.md  STRIPE_SETUP.md  analysis_report.md  ingestion_review_checklist.md  legacy_analysis.md  pricing_proposal.md
frontend/: Dockerfile  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
memory/: 2026-02-20.md  2026-02-21.md
monitoring/: promtail-config.yml
refactoring_ddmm/: dormant_sunset_backlog.md  implementation_plan.md  legacy_inventory.md  legacy_replacement_strategy.md  migration_decisions.md  model_ownership_map.md  task.md
scripts/: analytics_processing_worker.py  ariia  audit.sh  audit_deployment.sh  automation_engine_worker.py  backup_manager.py  bulk_enrich_worker.py  campaign_scheduler_worker.py  check_queue.py  check_sessions.py  check_telegram_history.py  cleanup_knowledge.py  contact_change_listener_worker.py  contact_insights_worker.py  convert_voices.py  debug_probe.py  (+63 more)
(+959 files in other folders)
